--- a/i18n/zh-CN.yaml
+++ b/i18n/zh-CN.yaml
@@ -10,10 +10,10 @@ categories:
 
 # ===== footer =====
 powered:
-  other: "由 %s 强力驱动"
+  other: "Platform - %s"
 
 theme:
-  other: "主题"
+  other: "THEME "
 
 siteUV:
   other: "本站总访客数 %s 人"
